--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-debug=true
+spring.profiles.active=prod
+
+spring.application.name=Spring Boot Configuration Project
+
+app.message=This is the Primary Application Property for ${spring.application.name}
